Caps.Web.UI/Content/app.css
/* ... */
    .thumbnail-container.item-checked .item-check i,
    .no-touch .thumbnail-container.item-checked .item-check:hover i {
        padding-right: 1px;
    }

.thumbnail-list > .row > div {
    padding-top:15px;
}
.thumbnail-list > .row:first-of-type > div {
    padding-top:0;
}
.thumbnail-list .separator {
    border-top:1px solid #eee;
}
.thumbnail-list .separator:last-of-type {
    display:none;
}


.thumbnail-remove {
    position:absolute;
    bottom:15px; 
    left:5px;
}

/**
 * File Drop Zone
 */
#drop-zone {
    overflow:hidden;
    background:#fafafa;
}
.drop-zone-placeholder p {
    text-align:center;
    font-size:150%;
    line-height:24pt;
    color:#999;
    padding:4em;
}

/**
 * ContentFile Previews
 */
.file-preview {
    height:100%;
    background:#ddd;
    background-position:center center;
    background-repeat: no-repeat;
    background-size:contain;
}

.image-preview {
    text-align:center;
    min-height:180px;
}
    .image-preview img {
        max-width:100%;
        max-height:100%;
        vertical-align:middle;
    }

.file-preview.unknown-preview {
    display:table;
    width:100%;
}
    .unknown-preview > span {
        display:table-cell;
        vertical-align:middle;
        text-align:center;
        padding:2em;
    }

/**
 * Error Summary
 */
.error-summary-container {
    display: inline-block;
    padding-left: 10px;
}
.error-summary {
    display: inline-block;
    vertical-align: middle;
    background: red;
    color: #fff;
    font-weight: bold;
    padding: 5px 12px;
    cursor: default;
    line-height: 20px;
}

/**
 * Misc Helpers
 */
.break-h {
    word-wrap:break-word;
}

.form-status p {
    line-height:20px;
    padding:5px 0;
    margin:0;
}

.full-height {
    margin-bottom:0;
}

.cursor-default {
    cursor:default;
}

a.no-underline,
a.no-underline:active,
a.no-underline:visited,
a.no-underline:hover {
    text-decoration:none;
}

.user-online {
    color:#3a7921;
}
.user-offline {
    color:#ccc;
}

#login-form {
    margin:25px 0 0;
}


#FiltersDropDown {
    min-width:220px;
    max-height:250px;
}

.menu-section {
    margin:3px 11px;
    padding:0px 10px;
}

.scrollable {
    overflow-x:hidden;
    overflow-y:scroll;
    -webkit-overflow-scrolling: touch;
    border:1px solid #ddd;
    margin:10px;
}

.dropdown-buttons {
    padding:0 10px 4px;
    text-align:right;
}
    .dropdown-buttons > button {
        min-width:80px;
    }

.dropdown-options {
    padding:3px 16px 7px;
}

.checkbox-list {
    list-style-type:none;
    padding:0 0 5px;
    margin:0;
}
    .checkbox-list > li {
        position:relative;
    }
    .checkbox-list > li > a {
        color:#000;
        text-decoration:none;
        padding:5px 0 0;
        display:inline-block;
    }

input.hide-ms-clear::-ms-clear {
    display:none;
}

.module-unsaved-data {
    font-weight:normal;
}

img.clickable {
    cursor:pointer;
}

/**
 * Draft
 */

.draft-navigation {
    background:#eee;
    padding-bottom:1em;
    margin-bottom:15px;
}
.draft-navigation .nav-header {
    padding:0;
    margin:15px;
}

#draftTemplate {
    margin:0 15px;
}

.dt-content-part {
    background:#eee;
    min-height:160px;
    height:120px;
    padding-top:15px;
    padding-bottom:15px;
}
    .dt-content-part > div {
        position:relative;
        width:100%;
        height:100%;
        background:#fff;
        box-shadow: rgba(0,0,0,0.3) 3px 3px 5px;
        box-sizing:padding-box;
        padding:1em;
    }
        .dt-content-part > div > a {
            font-weight:bold;
        }

.text-editor {
    overflow:hidden;
    min-height:350px;
}
.text-editor > textarea {
    width:100%;
    height:100%;
    min-height:350px;
    box-sizing:border-box;
}

.contentpart-nav {
    position:relative;
    overflow:hidden;
    padding:5px 0 0;
}

.draft-preview {
    min-height:300px;
}

.draft-preview-content {
    border-top:1px solid #eee;
    border-bottom:1px solid #eee;
}

.draft-preview-panel {
    padding:15px 0;
}

    .draft-preview .row {
        border-bottom:1px solid #fff;
    }
    .draft-preview .row:last-of-type {
        border-bottom:0;
    }
        .draft-preview .row > div {
            border-right:1px solid #fff;
        }

        .draft-preview .row > div:last-of-type {
            border-right:0;
        }

    .draft-preview pre {
        border:0;
        border-radius:0;
        margin:0 0 10px;
        padding:0;
        font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size:14px;
        background:transparent;
    }

    .draft-preview h1:first-of-type,
    .draft-preview h2:first-of-type,
    .draft-preview h3:first-of-type,
    .draft-preview h4:first-of-type {
        /*padding-top:0;
        margin-top:0;*/
    }

    .template-preview-cell {
        overflow:hidden;
        padding:15px 0;
    }

ul.data-list {
    list-style-type:none;
    padding:0;
    margin:0 0 15px;
    box-sizing:border-box;
}
    ul.data-list li {
        padding:7px 7.5px;
        border-bottom:1px solid #eee;
    }
    ul.data-list li:first-of-type {
        border-top:1px solid #eee;
    }
        ul.data-list li.active {
            background: #0088cc;
        }
            ul.data-list li.active {
                color:#fff;
            }

/**
 * Media Queries
 * -----------------------------------------------------------------------------
 */

@media (max-width: 992px) {
    
    .dragdrop-placeholder p {
        padding:3em;
    }

    #drop-zone {
        padding-right:15px;
    }
    .toolbar {
        padding-right:15px;
    }
    
    .toolbar h3 {
        margin:.25em 0 .5em;
    }

    .image-preview {
        padding:4px 0 8px 0;
    }
    #draftTemplate {
        margin:0;
    }
    .draft-navigation {
        overflow:hidden;
        margin-top:15px;
    }
}
/* ... */

